--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,11 +1,10 @@
+{{/*  Image Resources  */}}
+{{ $img := .Page.Resources.GetMatch (printf "%s" (.Get "src" | safeURL ))}}
+{{ $alt := .Get "alt"}}
 
-
-
-
-{{/*  {{ $img := .Page.Resources.GetMatch (printf "*%s*" (.Get 0 | safeURL)) }}
-{{ $command := .Get 1 }}
-{{ $options := .Get 2 }}
-{{ $alt := .Get 3 }}
+{{/*  Image Processing  */}}
+{{ $command := .Get "size-method" }}
+{{ $options := .Get "size-format" }}
 {{ if eq $command "Fit"}}
   {{ $img = $img.Fit $options }}
 {{ else if eq $command "Resize"}}
@@ -14,25 +13,11 @@
   {{ $img = $img.Fill $options }}
 {{ else if eq $command "Crop"}}
   {{ $img = $img.Crop $options }}
-{{ else }}
-  {{ errorf "Invalid image processing command: Must be one of Crop, Fit, Fill or Resize."}}
 {{ end }}
 
+{{/*  Position  */}}
+{{ $position := .Get "position" }}
 
-
-<figure>
-  <img src="{{ $img.RelPermalink }}" width="{{ $img.Width }}" height="{{ $img.Height }}" alt="{{ $alt }}" >
-
-
-
-  <figcaption>
-  <small>
-    {{ with .Inner }}
-      {{ . }}
-    {{ else }}
-      .{{ $command }} "{{ $options }}"
-    {{ end }}
-  </small>
-  </figcaption>
-
-</figure>  */}}
+<figure class='mb-5{{ if eq $position "center" }} flex justify-center{{ end }}'>
+    <img src="{{ $img.RelPermalink }}" {{ with $alt }}alt="{{ . }}"{{end}} width="{{ $img.Width }}" height="{{ $img.Height }}" >
+</figure>
