V.1.1.0: Bring back single page on homepage
- Bring back single page on homepage
- Adding abbility to select between single page or list page on the homepage (You can specify it in the ``config/params.toml`` file)

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,7 @@
 {{ define "main" }}
+{{ if site.Params.isSinglePage }}
+{{ partial "single/homepage" . }}
+{{ else }}
 {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
 {{ $paginator := .Paginate $pages  }}
 <div class="flex flex-col gap-1">
@@ -9,7 +12,6 @@
     {{ partial "list/default" . }}
 {{ end }}
 </section>
-
 {{ partial "list/components/pagination" . }}
-
+{{ end }}
 {{ end }}
