--- a/layouts/taxonomies/home.html
+++ b/layouts/taxonomies/home.html
@@ -6,7 +6,7 @@
 </div>
 
 <section class="py-10 flex flex-col gap-10 ">
-<ul class=" inline-flex gap-2 ">
+<ul class="taxonomy-list">
     {{ range $index, $pages}}
     {{ partial "list/categories" . }}
     {{ end }}
