--- a/layouts/partials/single/components/metatag/tags.html
+++ b/layouts/partials/single/components/metatag/tags.html
@@ -1,5 +1,5 @@
 {{ with (.GetTerms "tags") }}
-        <div class="pb-14 inline-flex gap-2 text-gray-600 text-sm font-medium">
+        <div class="pb-14 taxonomy-list tags-list text-gray-600 text-sm font-medium">
             {{ range . }}
                     <a class="bg-gray-100 py-2 px-3 rounded-lg" href="{{ .RelPermalink }}" alt="{{ .LinkTitle }}" >
                         {{ .LinkTitle }}
