--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,2 +1,2 @@
-{{ block "meta" . }}{{ partial "head/meta" . }}{{ end }}
-{{ block "postcss" . }}{{ partial "postcss" "css/main.css" }}{{ end }}
+{{ partial "head/meta" . }}
+{{ partial "postcss" "css/main.css" }}
