perf: Optimize postCSS / TailwindCSS output size

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,2 +1,2 @@
-{{ partial "head/meta" . }}
-{{ partial "postcss" "css/main.css" }}
+{{- partial "head/meta.html" . -}}
+{{- partial "head/styles.html" . -}}
