--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
 {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
 {{ $paginator := .Paginate $pages  }}
 <div class="flex flex-col gap-1">
-<h3 class="text-2xl font-extrabold">Latest Post</h3>
+<h3 class="text-2xl font-extrabold">Latest Posts</h3>
 </div>
 <section class="py-10 flex flex-col gap-10 ">
 {{ range $index, $pages := $paginator.Pages }}
