--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="flex flex-col sm:flex-row items-center gap-5 sm:gap-10 pt-16 py-12">
-    {{ partial "header/avatar" . }}
+    {{ partial "header/avatar.html" . }}
     <div class="flex flex-col gap-5">
-    {{ partial "header/title" . }}
-    {{ partial "header/nav" . }}
+    {{ partial "header/title.html" . }}
+    {{ partial "header/nav.html" . }}
     </div>
 </header>
