--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,10 +4,10 @@
     {{- partial "head.html" . -}}
     </head>
     <body class="max-w-screen-md px-10 mx-auto">
-        {{- partial "header.html" . -}}
-        <div id="content">
+        {{ partial "header.html" . }}
+        <main id="content">
         {{- block "main" . }}{{- end }}
-        </div>
+        </main>
         {{- partial "footer.html" . -}}
     </body>
 </html>
