--- a/layouts/partials/list/default.html
+++ b/layouts/partials/list/default.html
@@ -7,5 +7,5 @@
     {{ .Summary }}
     {{ end }}
     </div>
-    <div class="mt-2"><a class="inline-flex  gap-2 text-sm font-semibold items-center text-emerald-700 hover:text-emerald-600" href="{{ .Permalink }}">Read This Article <span class="w-4 h-4 stroke-2">{{ partial "processor/svg" "arrow-right" }}</span> </a> </div>
+    <div class="mt-2"><a class="inline-flex  gap-2 text-sm font-semibold items-center text-emerald-700 hover:text-emerald-600" href="{{ .Permalink }}">Read This Article <span class="w-4 h-4 stroke-2">{{ partial "handler/svg" "arrow-right" }}</span> </a> </div>
 </article>
