--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,12 +1,15 @@
 {{ define "main" }}
 
 <article class="flex flex-col gap-3">
-    <header>
-        <h2 class="text-2xl font-extrabold text-gray-900">{{ .Title }}</h2>
-    </header>
-    <section class="content text-lg text-gray-800">
-        Looks like you've followed a broken link or entered a URL that doesn't exist on this site.
-    </section>
+  <header>
+    <h2 class="title-small">Página não encontrada</h2>
+  </header>
+
+  <section>
+    <p>
+      Parece que você seguiu um link quebrado ou inseriu um URL que não existe neste site.
+    </p>
+  </section>
 </article>
-    
+
 {{ end }}
