--- a/layouts/partials/footer/copyright.html
+++ b/layouts/partials/footer/copyright.html
@@ -1,3 +1,12 @@
-<div class="text-xs font-semibold text-gray-500 order-2 sm:order-1 ">
-    © {{ replace .Site.Copyright "{year}" now.Year }} — <a class="hover:text-gray-500" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a> <span class=" font-normal ">with</span> <a class="hover:text-gray-500" href="https://github.com/nixentric/Lowkey-Hugo-Theme" target="_blank" rel="noopener noreferrer">Lowkey</a>
+<div class="text-xs font-semibold text-gray-500 order-2 sm:order-1">
+  © {{ replace .Site.Copyright "{year}" now.Year }} —
+  <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a> 
+  <span class="font-normal">with</span>
+  <a
+    href="https://github.com/nixentric/Lowkey-Hugo-Theme"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    Lowkey
+  </a>
 </div>
