--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,17 +1,30 @@
 {{ define "main" }}
+
 {{ $pages := .Pages }}
-{{ $paginator := .Paginate $pages  }}
+{{ $paginator := .Paginate $pages }}
+
 <div class="flex flex-col gap-1">
-<h1 class="text-2xl font-extrabold">{{ if .Params.header }}{{ .Params.header }}{{ else }}{{ .Title }}{{ end }}</h1>
-{{ if .Content }}<p class="content text-lg text-gray-900">{{ .Content }}</p>{{ end }}
+  <h1 class="text-2xl font-extrabold">
+    {{ if .Params.header }}
+      {{ .Params.header }}
+    {{ else }}
+      {{ .Title }}
+      {{ end }}
+    </h1>
+  
+  {{ with .Content }}
+    {{ . }}
+  {{ end }}
 </div>
 
-<section class="py-10 flex flex-col gap-10 ">
-{{ range $index, $pages := $paginator.Pages }}
+<section class="flex flex-col gap-10">
+  {{ range $index, $pages := $paginator.Pages }}
     {{ partial "list/default" . }}
-{{ end }}
+  {{ end }}
 </section>
 
-{{ partial "list/components/pagination" . }}
+{{ if gt $paginator.TotalPages 1 }}
+  {{ partial "list/pagination" . }}
+{{ end }}
 
 {{ end }}
