--- a/layouts/partials/head/styles.html
+++ b/layouts/partials/head/styles.html
@@ -1,13 +1,17 @@
-{{/*  Resources  */}}
-{{- $tailwind := resources.Get "css/tailwind.css"  | postCSS (dict "config" "./config/postcss.config.js") -}}
+{{/* Resources */}} 
+{{- $tailwind := resources.Get "css/tailwind.css" | postCSS (dict "config" "./config/postcss.config.js") -}}
 
-{{/*  Processor  */}}
-{{- $styles := slice $tailwind | resources.Concat "css/app.css" -}}
+{{/* MathJax */}}
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/x-mathjax-config">MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'], ['\\(','\\)']] } });</script>
 
-{{/* Output */}}
+{{/* Processor */}} 
+{{- $styles := slice $tailwind | resources.Concat "css/app.css" -}} 
+
+{{/* Output */}} 
 {{- if eq hugo.Environment "development" -}}
-<link rel="stylesheet" href="{{ $styles.Permalink | absURL }}">
-{{- else -}}
-{{- $styles := $styles | minify | fingerprint | resources.PostProcess -}}
-<link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}" >
+    <link rel="stylesheet" href="{{ $styles.Permalink | absURL }}" />
+{{- else -}} 
+    {{- $styles := $styles | minify | fingerprint | resources.PostProcess -}}
+    <link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}" />
 {{- end -}}
