--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,23 +1,16 @@
-{{/*  Image Resources  */}}
-{{ $img := .Page.Resources.GetMatch (printf "%s" (.Get "src" | safeURL ))}}
-{{ $alt := .Get "alt"}}
+{{ $img := .Page.Resources.GetMatch (printf "%s" (.Get "src" | safeURL )) }}
+{{ $alt := .Get "alt" }}
+{{ $caption := .Get "caption" }}
+{{ $captionPosition := .Get "caption-position" }}
 
-{{/*  Image Processing  */}}
-{{ $command := .Get "size-method" }}
-{{ $options := .Get "size-format" }}
-{{ if eq $command "Fit"}}
-  {{ $img = $img.Fit $options }}
-{{ else if eq $command "Resize"}}
-  {{ $img = $img.Resize $options }}
-{{ else if eq $command "Fill"}}
-  {{ $img = $img.Fill $options }}
-{{ else if eq $command "Crop"}}
-  {{ $img = $img.Crop $options }}
-{{ end }}
-
-{{/*  Position  */}}
-{{ $position := .Get "position" }}
-
-<figure class='mb-5{{ if eq $position "center" }} flex justify-center{{ end }}'>
-    <img src="{{ $img.RelPermalink }}" {{ with $alt }}alt="{{ . }}"{{end}} width="{{ $img.Width }}" height="{{ $img.Height }}" >
+<figure class='mb-5'>
+  <img src="{{ $img.RelPermalink }}" {{ with $alt }} alt="{{ . }}" {{ end }} width="{{ $img.Width }}" height="{{ $img.Height }}" />
+  
+  {{ with $caption }}
+    <figcaption 
+      class='{{ if eq $captionPosition "center" }} flex justify-center {{ else if eq $captionPosition "end" }} flex justify-end {{ end }}'
+    >
+      {{ . }}
+    </figcaption>
+  {{ end }}
 </figure>
