--- a/layouts/taxonomies/home.html
+++ b/layouts/taxonomies/home.html
@@ -1,17 +1,29 @@
-{{ define "main" }}
-{{ $pages := .Pages }}
+{{ define "main" }} 
+
 <div class="flex flex-col gap-1">
-<h1 class="text-2xl font-extrabold">{{ if .Params.header }}{{ .Params.header }}{{ else }}{{ .Title }}{{ end }}</h1>
-{{ if .Content }}<p class="content text-lg text-gray-900">{{ .Content }}</p>{{ end }}
+  <h1 class="title-small">
+    {{ if .Params.header }}
+      {{ .Params.header }}
+    {{ else }}
+      {{ .Title }}
+    {{ end }}
+  </h1>
+
+  {{ with .Content }}
+    {{ . }}
+  {{ end }}
 </div>
 
-<section class="py-10 flex flex-col gap-10 ">
-<ul class="taxonomy-list">
-    {{ range $index, $pages}}
-    {{ partial "list/categories" . }}
+<section class="py-10 flex flex-col gap-10">
+  <ul class="taxonomy-list">
+    {{ range $index, $pages := .Pages }} 
+      <li>
+        <a href=" {{ .Permalink }} ">
+          {{ .Title }} ({{ len .Pages }})
+        </a>
+      </li>
     {{ end }}
-</ul>
+  </ul>
 </section>
-
 
 {{ end }}
