Update i18n files and 404 page layout

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,13 +2,11 @@
 
 <article class="flex flex-col gap-3">
   <header>
-    <h2 class="title-small">Página não encontrada</h2>
+    <h2 class="title-small">{{ i18n "404_title" }}</h2>
   </header>
 
   <section>
-    <p>
-      Parece que você seguiu um link quebrado ou inseriu um URL que não existe neste site.
-    </p>
+    <p>{{ i18n "404_text" }}</p>
   </section>
 </article>
 
