Use i18n for summary

--- a/layouts/partials/single/table-of-contents.html
+++ b/layouts/partials/single/table-of-contents.html
@@ -1,6 +1,6 @@
 {{ if and .TableOfContents .Params.tableOfContents }}
   <aside class="table-of-contents">
-    <h2 class="title-small">Sumário</h2>
+    <h2 class="title-small">{{ i18n "summary" }}</h2>
     {{ .TableOfContents }}
   </aside>
 {{ end }}
