Add horizontal padding

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -103,7 +103,7 @@
   }
 
   body {
-    @apply bg-white dark:bg-gray-900 text-gray-700 dark:text-gray-300 text-lg text-justify;
+    @apply bg-white dark:bg-gray-900 text-gray-700 dark:text-gray-300 text-lg text-justify px-4;
   }
   
   h1, h2, h3, h4, h5, h6 {
