try to answer issues or question in lowkey themes

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,22 +1,9 @@
 {{ define "main" }} 
 
-{{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }} 
-{{ $paginator := .Paginate $pages }}
-
 <div class="py-2 flex flex-col gap-1">
-  <h3 class="title-small">{{ i18n "latestPosts" }}</h3>
+  <h3 class="title-small">{{ .Title }}</h3>
 </div>
 
-<hr/>
-
-<section class="pb-10 flex flex-col gap-10">
-  {{ range $index, $pages := $paginator.Pages }} 
-    {{ partial "list/default" . }} 
-  {{ end }}
-</section>
-
-{{ if gt $paginator.TotalPages 1 }}
-  {{ partial "list/pagination" . }} 
-{{ end }}
+    <section>{{ .Content }} </section>
 
 {{ end }}
