--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -1,3 +1,5 @@
+{{ $favicon := resources.GetMatch .Site.Params.favicon }} 
+
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,3 +8,4 @@
 <link rel="canonical" href="{{ .Permalink }}">
 <link rel="robots" href="/robots.txt" />
 
+<link rel="icon" type="image/x-icon" href="{{ $favicon.RelPermalink }}">
