--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -13,6 +13,7 @@
 
 <link rel="icon" type="image/x-icon" href="{{ $favicon.RelPermalink }}" />
 
+{{ if .Site.GoogleAnalytics}}
 <!-- Google Analytics -->
 <script
   defer
@@ -28,3 +29,4 @@
   gtag('config', '{{ .Site.GoogleAnalytics }}');
 </script>
 <!-- End Google Analytics -->
+{{ end }}
