Adding padding to improve mobile view
Adding a small padding to improve mobile view

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     {{- partial "head/index" . -}}
   </head>
 
-  <body class="max-w-screen-md mx-auto">
+  <body class="max-w-screen-md mx-auto px-2.5">
     <div class="header">
       {{ partial "header/index" . }}
       {{ partial "header/theme-button" . }}
