Update social.html to support Mastodon style verification
if you want to verify your profile on mastodon, you need to provide a link to your account with the 'rel="me"' tag on your website, this accomplishes that.

I'm not aware of any negative side effects of this change.

More info:
https://joinmastodon.org/verification

--- a/layouts/partials/footer/social.html
+++ b/layouts/partials/footer/social.html
@@ -3,7 +3,7 @@
     {{ with site.Menus.social }}
     {{ range . }}
     <li>    
-      <a href="{{ .URL }}" target="_blank" rel="noopener noreferrer">{{ .Name }}</a>
+      <a href="{{ .URL }}" target="_blank" rel="me noopener noreferrer">{{ .Name }}</a>
     </li>
     {{ end }}
     {{ end }}
